force-app/main/default/objects/Savings_Account__c/fields/Balance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Balance_Fee__c</fullName>
    <label>Fee Balance</label>
    <summarizedField>Savings_Product_Transaction__c.Balance_Fee__c</summarizedField>
    <summaryForeignKey>Savings_Product_Transaction__c.Savings_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>