force-app/main/default/objects/Savings_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Savings Accounts</relationshipLabel>
    <relationshipName>Savings_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>