force-app/main/default/objects/Savings_Account__c/fields/Savings_Product__c.field-meta.xml
<CustomField>
    <fullName>Savings_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Savings Product</label>
    <referenceTo>Savings_Product__c</referenceTo>
    <relationshipLabel>Savings Accounts</relationshipLabel>
    <relationshipName>Savings_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>