force-app/main/default/objects/Savings_Account__c/fields/Timelock_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Timelock_Expiry__c</fullName>
    <label>Timelock Expiry</label>
    <type>Date</type>
</CustomField>