force-app/main/default/objects/Savings_Account__c/fields/Timelocked__c.field-meta.xml
<CustomField>
    <fullName>Timelocked__c</fullName>
    <formula>Today()  &lt;=  Timelock_Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timelocked</label>
    <type>Checkbox</type>
</CustomField>