force-app/main/default/objects/Savings_Account__c/fields/Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest__c</fullName>
    <label>Total Interest</label>
    <summarizedField>Savings_Product_Transaction__c.Total_Interest__c</summarizedField>
    <summaryForeignKey>Savings_Product_Transaction__c.Savings_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>