force-app/main/default/objects/Savings_Account__c/fields/Withdraw_Balance__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_Balance__c</fullName>
    <label>Withdraw Balance</label>
    <summarizedField>Savings_Product_Transaction__c.Total_Withdrawal__c</summarizedField>
    <summaryFilterItems>
        <field>Savings_Product_Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Withdrawal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Savings_Product_Transaction__c.Reversed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Savings_Product_Transaction__c.Savings_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>