force-app/main/default/objects/Savings_Account__c/recordTypes/Business_Savings_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Savings_Account</fullName>
    <active>true</active>
    <label>Business Savings Account</label>
</RecordType>