force-app/main/default/objects/Savings_Account__c/recordTypes/Personal_Savings_Account.recordType-meta.xml
<RecordType>
    <fullName>Personal_Savings_Account</fullName>
    <active>true</active>
    <label>Personal Savings Account</label>
</RecordType>