force-app/main/default/objects/Savings_Account__c/validationRules/Age_Validation_From_Savings_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Validation_From_Savings_Products</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.Age__c &gt;  Savings_Product__r.Maximum_Age__c  ||  Contact__r.Age__c  &lt;  Savings_Product__r.Minimum_Age__c</errorConditionFormula>
    <errorMessage>Age should be in the range which is given in the savings products.</errorMessage>
</ValidationRule>