force-app/main/default/objects/Savings_Account__c/validationRules/Check_Timelock_Expiry.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Timelock_Expiry</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Timelocked__c =TRUE,OR( ISBLANK (Timelock_Expiry__c)))</errorConditionFormula>
    <errorDisplayField>Timelock_Expiry__c</errorDisplayField>
    <errorMessage>When enabled Timelocked needs to select the Timelock Expiry date.</errorMessage>
</ValidationRule>