force-app/main/default/objects/Savings_Account__c/validationRules/Timelock_expiry_date_with_Current_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Timelock_expiry_date_with_Current_date</fullName>
    <active>true</active>
    <errorConditionFormula>Timelock_Expiry__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Timelock_Expiry__c</errorDisplayField>
    <errorMessage>Timelock expiry date initially must be greater than the current date</errorMessage>
</ValidationRule>